--- a/HostProfiles/Properties/Resources.resx
+++ b/HostProfiles/Properties/Resources.resx
@@ -193,4 +193,12 @@
   <data name="WebForm_ASPX__815_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\webform(aspx)_815_16x.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="LoadDefaultProfile" xml:space="preserve">
+    <value>No profiles found!
+
+Do you want to load your current hosts file?</value>
+  </data>
+  <data name="LoadDefaultProfile.Title" xml:space="preserve">
+    <value>Load default profile?</value>
+  </data>
 </root>
