Added duplicate method

--- a/HostProfiles/Properties/Resources.resx
+++ b/HostProfiles/Properties/Resources.resx
@@ -201,4 +201,7 @@ Do you want to load your current hosts file?</value>
   <data name="LoadDefaultProfile.Title" xml:space="preserve">
     <value>Load default profile?</value>
   </data>
+  <data name="Instance_5746" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\instance_5746.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
