--- a/HostProfiles/Properties/Resources.resx
+++ b/HostProfiles/Properties/Resources.resx
@@ -184,9 +184,6 @@
   <data name="ProfileExists" xml:space="preserve">
     <value>Profile already exist!</value>
   </data>
-  <data name="Waiting" xml:space="preserve">
-    <value>Waiting...</value>
-  </data>
   <data name="Rename_6779_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\rename_6779_32.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -206,5 +203,23 @@ Do you want to load your current hosts file?</value>
   </data>
   <data name="Save_6530" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\save_6530.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="table_16xLG" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\table_16xlg.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="text_16xLG" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\text_16xlg.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ShowAsTable.Tooltip" xml:space="preserve">
+    <value>Show as table</value>
+  </data>
+  <data name="ShowAsText.Tooltip" xml:space="preserve">
+    <value>Show as text</value>
+  </data>
+  <data name="DNSFlushed" xml:space="preserve">
+    <value>DNS flushed!</value>
+  </data>
+  <data name="Saving" xml:space="preserve">
+    <value>Saving...</value>
   </data>
 </root>
